// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CalderaNotice Matches snapshot with Success message 1`] = `
<div
  className="components-notice is-success is-dismissible"
>
  <div
    className="components-notice__content"
  >
    Good Things!
  </div>
  <button
    aria-label="Dismiss this notice"
    className="components-button components-icon-button components-notice__dismiss"
    onClick={[Function]}
    type="button"
  >
    <svg
      aria-hidden="true"
      className="dashicon dashicons-no"
      focusable="false"
      height={20}
      role="img"
      viewBox="0 0 20 20"
      width={20}
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M12.12 10l3.53 3.53-2.12 2.12L10 12.12l-3.54 3.54-2.12-2.12L7.88 10 4.34 6.46l2.12-2.12L10 7.88l3.54-3.53 2.12 2.12z"
      />
    </svg>
  </button>
</div>
`;

exports[`CalderaNotice Matches snapshot with error message 1`] = `
<div
  className="components-notice is-error is-dismissible"
>
  <div
    className="components-notice__content"
  >
    Bad Things!
  </div>
  <button
    aria-label="Dismiss this notice"
    className="components-button components-icon-button components-notice__dismiss"
    onClick={[Function]}
    type="button"
  >
    <svg
      aria-hidden="true"
      className="dashicon dashicons-no"
      focusable="false"
      height={20}
      role="img"
      viewBox="0 0 20 20"
      width={20}
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M12.12 10l3.53 3.53-2.12 2.12L10 12.12l-3.54 3.54-2.12-2.12L7.88 10 4.34 6.46l2.12-2.12L10 7.88l3.54-3.53 2.12 2.12z"
      />
    </svg>
  </button>
</div>
`;
